--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----------- CONFIGURABLE START -----------
 title:            "Love - Travel - Money"
 description:      ""
-url:              https://lovetravelmoney.com/ 
+url:              https://lovetravelmoney.com 
 signoff:          "Courtney & Rob" # Your name
 facebook_appid:   #liberxue
 google_analytics: UA-101222464-1
