--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
-title: Sleek # your site title
-author: GitHub User
+title: lovetravelmoney.com # your site title
+author: love travel money
 email: your-email@domain.com # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Courtney & Rob Adventure couple traveling the world while trying to make a living at the same time. 👩🏻‍💻@courtneymakesvideo 👨🏻‍💻@robert_james_gabriel #♥️✈️💵
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://lovetravelmoney.com/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
-github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
-instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
+twitter_username: lovetravelmoney # replace with your_twitter_username or comment to remove link from footer
+github_username:  robertjgabriel # replace with your_github_username or comment to remove link from footer
+instagram_username: lovetravelmoney # replace with your_instagram_username or comment to remove link from footer
 social:
   name: Your Name
   links:
@@ -21,7 +19,7 @@ social:
     - https://keybase.io/benbalter
 
 disqus:
-  shortname: janczizikow # to enable comments replace with your_disqus_shortname
+  shortname: lovetravelmoney # to enable comments replace with your_disqus_shortname
 
 # Build settings
 markdown: kramdown
