--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: lovetravelmoney.com # your site title
 author: love travel money
+encoding: UTF-8
 email: courtneymakesvideo@gmail.com # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
   Courtney & Rob Adventure couple traveling the world while trying to make a living at the same time. 👩🏻‍💻@courtneymakesvideo 👨🏻‍💻@robert_james_gabriel #♥️✈️💵
