--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://lovetravelmoney.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lovetravelmoney # replace with your_twitter_username or comment to remove link from footer
 github_username: lovetravelmoney # replace with your_github_username or comment to remove link from footer
+facebook_username: LoveTravelMoney # replace with your_github_username or comment to remove link from footer
 instagram_username: lovetravelmoney # replace with your_instagram_username or comment to remove link from footer
 social:
   name: Your Name
