--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ twitter_username: lovetravelmoney # replace with your_twitter_username or commen
 github_username: lovetravelmoney # replace with your_github_username or comment to remove link from footer
 facebook_username: LoveTravelMoney # replace with your_github_username or comment to remove link from footer
 instagram_username: lovetravelmoney # replace with your_instagram_username or comment to remove link from footer
+youtube_username: lovetravelmoney # replace with your_instagram_username or comment to remove link from footer
 social:
   name: Your Name
   links:
