--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ github_username: lovetravelmoney # replace with your_github_username or comment 
 facebook_username: LoveTravelMoney # replace with your_github_username or comment to remove link from footer
 instagram_username: lovetravelmoney # replace with your_instagram_username or comment to remove link from footer
 youtube_username: lovetravelmoney # replace with your_instagram_username or comment to remove link from footer
+twitch_username: lovetravelmoney # replace with your_instagram_username or comment to remove link from footer
 social:
   name: Your Name
   links:
