--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: lovetravelmoney.com # your site title
+title: Love Travel Money
 author: love travel money
 encoding: UTF-8
 email: courtneymakesvideo@gmail.com # email for form submission, you also have to change it in _js/scripts.js
